# spotify_lyrics_mock

./: Cargo.toml  README.md
.github/workflows/: release-deb.yml
assets/: spotify_lyrics.desktop
src/: lyrics.rs  main.rs  spotify.rs  spotify_official.rs  storage.rs  ui.rs
